# qdrant-resources

./: .gitignore  ARTICLES.md  CONTRIBUTING.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
Gemini-embeddings/: Gemini2&Qdrant.ipynb  README.md
Matryoshka-MRL/: README.md
Qdrant-101/: getting_started.ipynb  qdrant_101_tutorial.ipynb  readme.md
Quantization-FaceOff/: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
Quantization-FaceOff/qfo/: config.py  demo.py  run_all.py  telemetry.py
Quantization-FaceOff/qfo/bench/: eval.py  rescore_sweep.py  throughput.py
Quantization-FaceOff/qfo/pipeline/: add_bq.py  ingest.py
Quantization-FaceOff/qfo/viz/: report.py  rescore_chart.py
RAG/: llamaindex.ipynb
TurboQuant/: README.md  TurboQuant-Qdrant.ipynb
bm25-go-hybrid/: README.md  go.mod  go.sum  main.go
chonkie/: Chonkie_Qdrant_Handshake.ipynb  Chonkie_Qdrant_Handshake_READY.ipynb  readme.md
haystack-qdrant/: README.md  haystack_Qdrant_colab.ipynb
ingest/: qdrant_ingest.py
