[project]
name = "quantization-faceoff"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "datasets>=5.0.0",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "wandb>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["qfo"]
